# sand-template

./: .gitignore  Cargo.toml  build_apk.sh  cargo-generate.toml  inject_lib.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/{% assign splitted = package_name | split: "."  %} {{ splitted[1] }}/{% assign splitted = package_name | split: "." %} {{ splitted[2] }}/: MainActivity.java  SandActivity.java
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/{% assign splitted = package_name | split: "."  %} {{ splitted[1] }}/{% assign splitted = package_name | split: "." %} {{ splitted[2] }}/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
src/: lib.rs
